tests/__snapshots__/validation-rootPath-path-does-not-exist.snap.txt
Error: The specified path '<<cwd>>/tests/__fixtures__/.generated/validation-rootPath/nope' does not exist.

  1 | {
  2 |   "rootPath": "../nope",
    |               ~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.t*st.*"
  5 |   ]
  6 | }

      at ./config/tstyche.json:2:15

